# hello-world

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  pch.h
